# fastapi_kodekloud_course

./: .envexample  .gitignore  Dockerfile  README.md  compose-dev.yml  compose-prod.yml  compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-deploy.yml
alembic/: env.py
alembic/versions/: 40470bd9718e_add_posts_table.py  d588d1a17507_add_users_table.py  dc8511ad7c78_add_votes_table.py  f1e0b0395129_add_friends_table.py
app/: .envexample  config.py  database.py  oauth2.py  utils.py
app/models/: __init__.py  post.py  user.py  vote.py
app/routers/: __init__.py  auth.py  posts.py  users.py  vote.py
app/schemas/: __init__.py  post.py  token.py  user.py  vote.py
examples/: 001_basic_examples.py  002_pydantic_example.py  003_http_response_example.py  004_psycopg_example.py  005_psycopg_with_api_example.py  006_sqlalchemy_example.py  007_updated_path_operations_with_pydantic_and_sqlalchemy.py  008_main_py_before_refactoring_into_app.py  pytest_examples.py
tests/: conftest.py  database.py  pytest_examples_test.py  test_posts.py  test_root.py  test_user.py  test_vote.py
